<resources>
    <string name="app_name">MyPlaces</string>

    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places_list">My Places</string>
    <string name="about">About</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="ok">Ok</string>
    <string name="about_text">About</string>
    <string name="editmyplace_name_label">Name:</string>
    <string name="editmyplace_desc_label">Description:</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <string name="editmyplace_lat_label">Latitude:</string>
    <string name="editmyplace_lon_label">Longitude:</string>
    <string name="editmyplace_location_label">Get Location</string>
    <string name="viewmyplace_finished_label">Ok</string>
</resources>