<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="rs.elfak.mosis.nikola.myplaces.EditMyPlaceActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label" />

    <EditText
        android:id="@+id/editmyplace_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label" />

    <EditText
        android:id="@+id/editmyplace_desc_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     />

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/editmyplace_lat_label"/>
                <EditText
                    android:id = "@+id/editmyplace_lat_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/editmyplace_lon_label"/>
                <EditText
                    android:id = "@+id/editmyplace_lon_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <Button
                android:id = "@+id/editmyplace_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/editmyplace_location_label"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/editmyplace_finished_button"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/editmyplace_cancel_button"
                android:layout_weight="1"
                android:text="@string/editmyplace_cancel_label" />

        </TableRow>
    </TableLayout>


</LinearLayout>
