<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="rs.elfak.mosis.nikola.myplaces.ViewMyPlaceActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label" />

    <TextView
        android:id="@+id/viewmyplace_name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
 />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label" />

    <TextView
        android:id="@+id/viewmyplace_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/viewmyplace_finished_buttom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewmyplace_finished_label" />
</LinearLayout>
